[package]
name = "five_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum="0.7.5"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
http-body-util = "0.1.2"
serde = { version="1.0.217",features = ["derive"] }
serde_json = "1.0.134"
tower="0.4.13"
futures-util = "0.3.31"
futures = "0.3.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time","local-time"] }
time = { version = "0.3.37", features = ["macros"] }









